# RAXON-v1.0-browser-comparison-agent-replay-viewer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hosts.yaml.example  run_agent.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
S9SharedCode/: run_demo.sh
S9SharedCode/code/: .env.example  .gitignore  VALIDATION.md  action.py  agent7_s7_carryover.py  agent_config.yaml  api_server.py  artifacts.py  capture_engine.py  decision.py  flow.py  gateway.py  mcp_runner.py  mcp_server.py  memory.py  perception.py  persistence.py  pyproject.toml  recovery.py  replay.py  requirements.txt  sandbox.py  schemas.py  skills.py  test_mcp_server.py  vector_index.py
S9SharedCode/code/browser/: PARITY_AUDIT.md  __init__.py  client.py  dom.py  driver.py  highlight.py  skill.py
S9SharedCode/code/prompts/: browser.md  coder.md  critic.md  distiller.md  formatter.md  planner.md  researcher.md  retriever.md  sandbox_executor.md  summariser.md
S9SharedCode/code/tests/: test_api_server.py  test_browser_actions_log.py  test_capture_generic.py  test_critic_autoinsert.py  test_natural_vision_search.py  test_recovery.py  test_recovery_amnesia.py  test_replay_summary.py
S9SharedCode/code/ui/: app.jsx  index.html
demo/: GITHUB.md  YOUTUBE.md  make_video.sh
llm_gatewayV9/: README.md  agent_routing.yaml  cache.py  client.py  db.py  embedders.py  main.py  pricing.py  providers.py  pyproject.toml  requirements.txt  router.py  run.sh  schemas.py
llm_gatewayV9/static/: dashboard.html  help.html
llm_gatewayV9/tests/: test_all_providers.py  test_embed.py  test_vision_endpoint.py  test_vision_smoke.py
scripts/: hostsenv.py  record_demo.py
